--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@tailwindcss/postcss": "^4.0.12",
     "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -51,6 +50,7 @@
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
+    "npm": "^11.2.0",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
@@ -65,6 +65,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.12",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22",
     "@types/react": "^18",
@@ -72,7 +73,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.2.1",
     "postcss": "^8",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.12",
     "typescript": "^5"
   }
 }
