--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@vercel/analytics": "^1.5.0",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -48,17 +48,18 @@
     "input-otp": "1.4.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^15.0.0",
     "next-themes": "^0.4.4",
     "npm": "^11.2.0",
-    "react": "^18",
+    "react": "^18.3.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
+    "tailwindcss": "^4.0.12",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
@@ -67,13 +68,12 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.12",
     "@types/lodash": "^4.17.16",
-    "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "eslint": "^8",
     "eslint-config-next": "15.2.1",
-    "postcss": "^8",
-    "tailwindcss": "^4.0.12",
-    "typescript": "^5"
+    "postcss": "^8.4.35",
+    "typescript": "^5.0.0"
   }
 }
