--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@radix-ui/react-visually-hidden": "^1.1.2",
     "@vercel/analytics": "^1.5.0",
-    "autoprefixer": "^10.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -56,11 +56,11 @@
     "react-dom": "^18.3.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
+    "react-responsive": "^10.0.1",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss": "^4.0.12",
-    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.1",
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
@@ -71,9 +71,12 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.2.1",
-    "postcss": "^8.4.35",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.12",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.0.0"
   }
 }
