Update production API URL in config.json

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "production": {
-    "apiUrl": "https://school-api.ij5.dev",
+    "apiUrl": "https://api.timefor.school",
     "debug": false
   },
   "development": {
